Added Intellij Idea project with Kiev plugin and Gradle Kiev plugin